--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,17 @@ pluginManagement {
         google()
         mavenCentral()
     }
+    plugins {
+        id 'com.google.dagger' version '2.40.5'
+    }
+
+    resolutionStrategy {
+        eachPlugin {
+            if(requested.id.id == 'dagger.hilt.android.plugin') {
+                useModule("com.google.dagger:hilt-android-gradle-plugin:2.40.5")
+            }
+        }
+    }
 }
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
