--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.13.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'
-    
+
     // Activity-KTX
     implementation 'androidx.activity:activity-ktx:1.5.0-alpha03'
 
@@ -85,7 +85,9 @@ dependencies {
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     //Room
-    implementation "androidx.room:room-runtime:2.4.1"
+    implementation "androidx.room:room-runtime:2.4.2"
+    implementation "androidx.room:room-ktx:2.4.2"
+    kapt "androidx.room:room-compiler:2.4.2"
 
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:3.1.0'
