--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,12 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+        unitTests.returnDefaultValues = false
+    }
 }
 
 dependencies {
@@ -92,7 +98,24 @@ dependencies {
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:3.1.0'
 
+    //TEST
+    testImplementation "androidx.arch.core:core-testing:2.1.0"
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
+
+    testImplementation "org.mockito:mockito-inline:3.1.0"
+    testImplementation "org.mockito.kotlin:mockito-kotlin:3.2.0"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation 'org.mockito:mockito-core:3.9.0'
+
+    testImplementation "org.json:json:20190722"
+    testImplementation "io.mockk:mockk:1.12.0"
+
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.6.0")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.6.0")
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    testImplementation "app.cash.turbine:turbine:0.2.1"
+
+
+
 }
