--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,7 +98,7 @@ dependencies {
     // Paging
     implementation 'androidx.paging:paging-runtime-ktx:3.1.0'
 
-    //TEST
+    //Testing
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.4.2'
 
