--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,18 +30,12 @@ android {
     productFlavors {
         dev {
             //Change these values for DEV
-            buildConfigField "String", "MARVEL_API_PUBLIC_KEY", "\"${secretProperties.getProperty('app.marvel_public_api_key')}\""
-            buildConfigField "String", "MARVEL_API_PRIVATE_KEY", "\"${secretProperties.getProperty('app.marvel_private_api_key')}\""
-            buildConfigField "String", "BASE_URL_SERVICE", "\"https://gateway.marvel.com/\""
             dimension "server"
             applicationIdSuffix ".dev"
             versionNameSuffix "-dev"
         }
         pro {
             //Change these values for PRO
-            buildConfigField "String", "MARVEL_API_PUBLIC_KEY", "\"${secretProperties.getProperty('app.marvel_public_api_key')}\""
-            buildConfigField "String", "MARVEL_API_PRIVATE_KEY", "\"${secretProperties.getProperty('app.marvel_private_api_key')}\""
-            buildConfigField "String", "BASE_URL_SERVICE", "\"https://gateway.marvel.com/\""
             dimension "server"
             applicationIdSuffix ".pro"
             versionNameSuffix "-pro"
@@ -50,7 +44,7 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -70,6 +64,10 @@ android {
 }
 
 dependencies {
+
+    implementation project(':core')
+    implementation project(':data')
+    implementation project(':domain')
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
@@ -135,7 +133,5 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
 
     testImplementation "app.cash.turbine:turbine:0.2.1"
-
-
 
 }
